3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/Makefile.am: Clean up proto - lex seems to toss some new symbols in
  now days.
common/map.c, common/object.c, server/player.c, socket/item.c,
   socket/request.c: change parameters of get_map_from_coord from int to
   sint16, so the op->x,op->y can get passed directly in.  Update callers of
   this function.
lib/archetypes: Add damned 1 to the shop floors.
server/pets.c: Fix problem with big (multisquare) pets following the owner
   across tiled map boundaries.
socket/item.c: Fix problem of players being able to see everything within
   containers by just looking at them.
MSW 2004-02-10

common/treasure.c: add_abilities(): For potions and horns (spell casting
   objects) convert the other_arch into a spell and put into the object -
   otherwise, the spell casting object casts the wrong spell.
common/object.c: Clean up formatting of copy_object.  Only real code change
  is to fix events - copied event data wasn't getting malloc'd, and thus
  when another object of that event was freed, it freed the event data
  for all objects derived from it.
common/treasure.c: Fix fix_generated_item() so that books generated by
   monsters with no_pick set don't inherit that for the book itself. 
   Still do it for other objects of the creator type.
MSW 2004-02-08

server/c_object.c: fixed sack_can_hold for the 'won't fit' cast,
    missing 'return 0'
server/gods.c: applied Karla Stenger's patch, making sure 'praying' is
    applied when becoming fellower of a god
Ryo 2004-02-08

Changed map-building to work on non-unique maps too.
server/build_map.c: removed check for unique map.
Ryo 2004-01-19

